--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,7 @@
         <meta name="format-detection" content="telephone=no">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no, viewport-fit=cover">
         <meta http-equiv="x-dns-prefetch-control" content="on">
+        <meta name="revised" content="<%= htmlWebpackPlugin.options.version %>"/>
     </head>
     <body ontouchstart style="max-width: 1080px;overflow-x: hidden;">
         <div id="app"></div>
